[gd_scene load_steps=3 format=2]

[ext_resource path="res://Dice/DieSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Dice/PlayerDiceCollection.gd" type="Script" id=2]

[node name="PlayerDiceCollection" type="Node2D"]
script = ExtResource( 2 )

[node name="DieSlot1" parent="." instance=ExtResource( 1 )]
scale = Vector2( 1, 1 )

[node name="DieSlot2" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 0 )
scale = Vector2( 1, 1 )

[node name="DieSlot3" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 0 )
scale = Vector2( 1, 1 )

[node name="DieSlot4" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, 0 )
scale = Vector2( 1, 1 )

[node name="DieSlot5" parent="." instance=ExtResource( 1 )]
position = Vector2( 256, 0 )
scale = Vector2( 1, 1 )

[node name="DieSlot6" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 64 )
scale = Vector2( 1, 1 )

[node name="DieSlot7" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 64 )
scale = Vector2( 1, 1 )

[node name="DieSlot8" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 64 )
scale = Vector2( 1, 1 )

[node name="DieSlot9" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, 64 )
scale = Vector2( 1, 1 )

[node name="DieSlot10" parent="." instance=ExtResource( 1 )]
position = Vector2( 256, 64 )
scale = Vector2( 1, 1 )
